--- a/index.html
+++ b/index.html
@@ -42,6 +42,18 @@
     </div>
   </header>
 
+  <!-- SLIDER -->
+
+
+
+  <!-- RESERVATION -->
+
+
+
+  <!-- WEATHER -->
+
+
+
   <!-- PROMOTION -->
     <div class="promotion">
 
@@ -81,12 +93,18 @@
     </div>
   </section>
 
-  <!-- VISUAL -->
-  <section class="visual">
+  <!-- SEASON EVENT -->
+  <section>
     <div class="inner">
   
     </div>
   </section>
+
+
+  <!-- GUIDE -->
+
+
+  <!-- SNS -->
 
   <!-- FOOTER -->
   <footer>
