--- a/index.html
+++ b/index.html
@@ -37,12 +37,34 @@
 
   <!-- HEADER -->
   <header>
-    <div class="inner">
-
+    <div class="top-line">
+      <a>검색</a>
+      <a>|</a>
+      <a>기업 단체</a>
+      <a>|</a>
+      <a>학생 단체</a>
+      <a>|</a>
+      <a>KO</a>
+    </div>
+    <div class="nav-bar">
+      <a>캘린더</a>
+      <a>예매</a>
+      <a>호텔</a>
+      <a>어트랙션</a>
+      <a>쇼핑</a>
+      <a>프로모션</a>
+      <a>지도</a>
+      <a>가이드</a>
+      <a>배리어프리</a>
+      <a>자주 묻는 질문</a>
     </div>
   </header>
 
   <!-- SLIDER -->
+
+  <div class="slider">
+
+  </div>
 
 
 
@@ -51,44 +73,15 @@
 
 
   <!-- WEATHER -->
-
+  
+  <div class="weather">
+    <a>오늘의 파크 운영시간</a>
+    <a>10:00 AM - 08:00 PM</a>
+  </div>
 
 
   <!-- PROMOTION -->
     <div class="promotion">
-
-      <div class="swiper-container">
-        <div class="swiper-wrapper">
-          <div class="swiper-slide">
-            <img src="./images/promotion_slide1.jpg" alt="" />
-            <a href="javascript:void(0)" class="btn">자세히 보기</a>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/promotion_slide2.jpg" alt="" />
-            <a href="javascript:void(0)" class="btn">자세히 보기</a>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/promotion_slide3.jpg" alt="" />
-            <a href="javascript:void(0)" class="btn">자세히 보기</a>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/promotion_slide4.jpg" alt="" />
-            <a href="javascript:void(0)" class="btn">자세히 보기</a>
-          </div>
-          <div class="swiper-slide">
-            <img src="./images/promotion_slide5.jpg" alt="" />
-            <a href="javascript:void(0)" class="btn">자세히 보기</a>
-          </div>
-        </div>
-      </div>
-
-      <div class="swiper-pagination"></div>
-      <div class="swiper-prev">
-        <div class="material-icons">arrow_back</div>
-      </div>
-      <div class="swiper-next">
-        <div class="material-icons">arrow_forward</div>
-      </div>
 
     </div>
   </section>
@@ -141,9 +134,9 @@
 
   
     <!--TO TOP BUTTON-->
-    <div id="to-top">
+    <!-- <div id="to-top">
       <div class="material-icons">arrow_upward</div>
-    </div>
+    </div> -->
   
 
 </body>
