--- a/index.html
+++ b/index.html
@@ -82,14 +82,16 @@
 
   <!-- PROMOTION -->
     <div class="promotion">
-
+      <a>Ticket</a>
+      <a>Promotion</a>
     </div>
   </section>
 
   <!-- SEASON EVENT -->
   <section>
-    <div class="inner">
-  
+    <div class="event">
+      <a>Season</a>
+      <a>Event</a>
     </div>
   </section>
 
@@ -101,34 +103,8 @@
 
   <!-- FOOTER -->
   <footer>
-    <div class="inner">
-
-      <ul class="menu">
-        <li><a href="javascript:void(0)" class="green">개인정보처리방침</a></li>
-        <li><a href="javascript:void(0)">영상정보처리기기 운영관리 방침</a></li>
-        <li><a href="javascript:void(0)">홈페이지 이용약관</a></li>
-        <li><a href="javascript:void(0)">위치정보 이용약관</a></li>
-        <li><a href="javascript:void(0)">카드 이용약관</a></li>
-        <li><a href="javascript:void(0)">윤리경영 핫라인</a></li>
-      </ul>
-
-      <div class="btn-group">
-        <a href="javascript:void(0)">찾아오시는 길</a>
-        <a href="javascript:void(0)">신규입점제의</a>
-        <a href="javascript:void(0)">사이트 맵</a>
-      </div>
-
-      <div class="info">
-        <span>사업자등록번호 : 617-81-99974 | 통신판매업신고번호 : 제 2021-강원춘천-0527호 |</span>
-        <span>대표자 : 매튜 폴 조엣 | 사업자등록번호 : 617-81-99974</span>
-        <span>대표번호 033) 815-2300 (연중 10:00~18:00 / 점심 휴식 12:00~13:00)</span>
-      </div>
-
-      <p class="copyright">
-        &copy; <span class="this-year"></span> The LEGO Group
-      </p>
-      <img src="" alt="" class="logo">
-
+    <div class="footer">
+      
     </div>
   </footer>
 
