Add reservation section and quicktab

--- a/index.html
+++ b/index.html
@@ -70,7 +70,14 @@
 
   <!-- RESERVATION -->
 
-
+  <div class="reservation">
+    <div class="quickTab">
+        <ul>
+          <li class="ticketReserv">티켓예매</li>
+          <li class="hotelReserve">호텔예매</li>
+        </ul>
+    </div>
+  </div>
 
   <!-- WEATHER -->
   
