Add ticket quantity select featur

--- a/index.html
+++ b/index.html
@@ -70,22 +70,36 @@
 
   <!-- RESERVATION -->
 
-  <div class="reservation">
-    <div class="quickTab">
-        <ul>
-          <li class="ticketReserv">티켓예매</li>
-          <li class="hotelReserve">호텔예매</li>
-        </ul>
-    </div>
-
-    <div class="calender">
-      <input type="date">
-    </div>
-
-    <span class="adult">성인</span>
-    <span class="children">어린이</span>
-
+<div class="reservation">
+  <div class="quickTab">
+      <ul>
+        <li class="ticketReserv">티켓예매</li>
+        <li class="hotelReserve">호텔예매</li>
+      </ul>
   </div>
+
+  <div class="calender">
+    <input type="date">
+  </div>
+
+  <div class="quantityTag">
+    <span id="adult">성인</span>
+    <span id="children">어린이</span>
+  </div>
+  <div class="wrapper">
+    <div class="valueBtn">
+      <span id="adultMinus" class="minus">-</span>
+      <span id="adultNum" class="num">01</span>
+      <span id="adultPlus" class="plus">+</span>
+    </div>
+    <div class="valueBtn">
+      <span id="childrenMinus" class="minus">-</span>
+      <span id="childrenNum" class="num">00</span>
+      <span id="childrenPlus" class="plus">+</span>
+    </div>
+  </div>
+
+</div>
 
   <!-- WEATHER -->
   
