--- a/index.html
+++ b/index.html
@@ -71,14 +71,15 @@
   <!-- RESERVATION -->
 
 <div class="reservation">
+
   <div class="quickTab">
-      <ul>
-        <li class="ticketReserv">티켓예매</li>
-        <li class="hotelReserve">호텔예매</li>
-      </ul>
+    <ul>
+      <li id="ticketTab" class="ticketReserv active">티켓예매</li>
+      <li id="hotelTab" class="hotelReserve">호텔예매</li>
+    </ul>
   </div>
 
-  <div class="calender">
+  <div class="calendar">
     <input type="date">
   </div>
 
