--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
   <div class="quickTab">
     <ul>
       <li id="ticketTab" class="ticketReserv active">티켓예매</li>
-      <li id="hotelTab" class="hotelReserve">호텔예매</li>
+      <li id="hotelTab" class="hotelReserve">호텔예약</li>
     </ul>
   </div>
 
