--- a/index.html
+++ b/index.html
@@ -106,10 +106,8 @@
 
   <!-- WEATHER -->
   
-  <div class="weather">
-    <a>오늘의 파크 운영시간</a>
-    <a>10:00 AM - 08:00 PM</a>
-  </div>
+  <section class="weather">
+  </section>
 
 
   <!-- PROMOTION -->
