add footer details & sns title

--- a/index.html
+++ b/index.html
@@ -85,25 +85,48 @@
       <a>Ticket</a>
       <a>Promotion</a>
     </div>
-  </section>
 
   <!-- SEASON EVENT -->
-  <section>
     <div class="event">
       <a>Season</a>
       <a>Event</a>
     </div>
-  </section>
 
 
   <!-- GUIDE -->
 
 
   <!-- SNS -->
+    <div class="sns">
+      <a>instagram |</a>
+      <a>#레고랜드</a>
+      <a>해시태그로 올려주세요!</a>
+    </div>
 
   <!-- FOOTER -->
   <footer>
     <div class="footer">
+      <!-- title -->
+      <div class="footer_title">
+        <a>Policy</a>
+        <a>Terms & Conditions</a>
+        <a>Our Company</a>
+      </div>
+      
+      <!-- details -->
+
+      <div class="container">
+        <div class="item">Privacy Policy</div>
+        <div class="item">Refunds & Cancellation Policy</div>
+      </div>
+
+      <div class="container">
+        <div class="item">전자상거래 이용약관</div>
+        <div class="item">홈페이지 이용약관</div>
+        <div class="item">연간이용권 이용약관</div>
+        <div class="item">1일이용권 이용약관</div>
+        <div class="item">시즌패스 이용약관</div>
+      </div>
       
     </div>
   </footer>
