--- a/index.html
+++ b/index.html
@@ -21,6 +21,17 @@
   <meta property="twitter:url" content="https://LEGOLAND.co.kr" />
 
   <link rel="icon" href="./favicon.png">
+
+  <!-- favicon -->
+  
+  <link rel="icon" type="image/png" sizes="32x32" href="images/favicon-32x32.png">
+  <link rel="icon" type="image/png" sizes="96x96" href="images/favicon-96x96.png">
+  <link rel="icon" type="image/png" sizes="16x16" href="images/favicon-16x16.png">
+  <link rel="manifest" href="/manifest.json">
+  <meta name="msapplication-TileColor" content="#ffffff">
+  <meta name="msapplication-TileImage" content="images/ms-icon-144x144.png">
+  <meta name="theme-color" content="#ffffff">
+
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/reset-css@5.0.1/reset.min.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -70,7 +81,38 @@
 
   <!-- RESERVATION -->
 
-  <a>test</a>
+  <div class="reservation">
+
+    <div class="quickTab">
+      <ul>
+        <li id="ticketTab" class="ticketReserv active">티켓예매</li>
+        <li id="hotelTab" class="hotelReserve">호텔예약</li>
+      </ul>
+    </div>
+  
+    <div class="calendar">
+      <input type="date">
+    </div>
+  
+    <div class="quantityTag">
+      <span id="adult">성인</span>
+      <span id="children">어린이</span>
+    </div>
+    <div class="wrapper">
+      <div class="valueBtn">
+        <span id="adultMinus" class="minus">-</span>
+        <span id="adultNum" class="num">01</span>
+        <span id="adultPlus" class="plus">+</span>
+      </div>
+      <div class="valueBtn">
+        <span id="childrenMinus" class="minus">-</span>
+        <span id="childrenNum" class="num">00</span>
+        <span id="childrenPlus" class="plus">+</span>
+      </div>
+    </div>
+  
+    <div class="buyNow">BUY NOW</div>
+   </div>
 
 
   <!-- WEATHER -->
