Add Weather section

--- a/index.html
+++ b/index.html
@@ -117,6 +117,17 @@
   <!-- WEATHER -->
   
   <section class="weather">
+    <div class="termperature">
+      14
+    <img src="" alt="">
+    </div>
+    <div class="openingHours">
+      <span>오늘의 파크 운영시간</span>
+      <span>10:00 AM - 08:00 PM</span>
+    </div>
+    <span></span>
+    <div class="parkInfo">오늘의 파크 정보</div>
+    <div class="ticketSearch">티켓 검색</div>
   </section>
 
 
