Add Weather API

--- a/index.html
+++ b/index.html
@@ -117,9 +117,11 @@
   <!-- WEATHER -->
   
   <section class="weather">
-    <div class="temperature">14°</div>
-    <img src="./images/weather_icon.jpg" alt="weather_icon">
-    
+    <div class="temperature">
+      <h1 class="celsius">14°</h1>
+      <img src="./images/weather_icon.jpg" class="weather-icon" alt="weather_icon">
+    </div>
+
     <div class="openingHours">
       <div>오늘의 파크 운영시간</div>
       <div>10:00 AM - 08:00 PM</div>
