--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
   <section class="weather">
     <div class="temperature">
       <h1 class="celsius">14°</h1>
-      <img src="./images/weather_icon.jpg" class="weather-icon" alt="weather_icon">
+      <img src="./images/snow.png" class="weather-icon" alt="weather_icon">
     </div>
 
     <div class="openingHours">
