Add SeasonEvent slider section

--- a/index.html
+++ b/index.html
@@ -173,10 +173,25 @@
     </div>
 
   <!-- SEASON EVENT -->
-    <div class="event">
-      <a>Season</a>
-      <a>Event</a>
+    <div class="seasonEvent">
+      <div class="slider-container">
+        <div class="slides">  
+          <img src="./images/seasonEvent_1.png" alt="" class="active">
+          <img src="./images/seasonEvent_2.png" alt="">
+          <img src="./images/seasonEvent_3.png" alt="">
+          <img src="./images/seasonEvent_4.png" alt="">
+        </div>
+      </div>
+
+      <div class="dotsContainer">
+        <div class="dot active" attr='0'></div>
+        <div class="dot" attr='1'></div>
+        <div class="dot" attr='2'></div>
+        <div class="dot" attr='3'></div>
+      </div>
+
     </div>
+
 
 
   <!-- GUIDE -->
