Add auto slide animation

--- a/index.html
+++ b/index.html
@@ -173,15 +173,19 @@
     </div>
 
   <!-- SEASON EVENT -->
-    <div class="seasonEvent">
-      <div class="slider-container">
-        <div class="slides">  
-          <img src="./images/seasonEvent_1.png" alt="" class="active">
-          <img src="./images/seasonEvent_2.png" alt="">
-          <img src="./images/seasonEvent_3.png" alt="">
-          <img src="./images/seasonEvent_4.png" alt="">
-        </div>
+  <div class="seasonEvent">
+    <div class="slider-container">
+      <div class="slides">  
+        <img src="./images/seasonEvent_1.png" alt="" class="active">
+        <img src="./images/seasonEvent_2.png" alt="">
+        <img src="./images/seasonEvent_3.png" alt="">
+        <img src="./images/seasonEvent_4.png" alt="">
       </div>
+        
+      <!-- <div class="buttons">
+        <span class="next">&#10095;</span>
+        <span class="prev">&#10094;</span>
+      </div> -->
 
       <div class="dotsContainer">
         <div class="dot active" attr='0'></div>
@@ -190,7 +194,8 @@
         <div class="dot" attr='3'></div>
       </div>
 
-    </div>
+  </div>
+</div>
 
 
 
