Add Autoplay navigation with manual button

--- a/index.html
+++ b/index.html
@@ -174,29 +174,28 @@
 
   <!-- SEASON EVENT -->
   <div class="seasonEvent">
-    <div class="slider-container">
-      <div class="slides">  
-        <img src="./images/seasonEvent_1.png" alt="" class="active">
+    <div class="img-slider">
+      <div class="slide active">  
+        <img src="./images/seasonEvent_1.png" alt="">
+      </div>
+      <div class="slide">  
         <img src="./images/seasonEvent_2.png" alt="">
+      </div>
+      <div class="slide">  
         <img src="./images/seasonEvent_3.png" alt="">
+      </div>
+      <div class="slide">  
         <img src="./images/seasonEvent_4.png" alt="">
       </div>
-        
-      <!-- <div class="buttons">
-        <span class="next">&#10095;</span>
-        <span class="prev">&#10094;</span>
-      </div> -->
 
-      <div class="dotsContainer">
-        <div class="dot active" attr='0'></div>
-        <div class="dot" attr='1'></div>
-        <div class="dot" attr='2'></div>
-        <div class="dot" attr='3'></div>
+      <div class="navigation">
+        <div class="btn active"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
+        <div class="btn"></div>
       </div>
-
   </div>
 </div>
-
 
 
   <!-- GUIDE -->
