--- a/index.html
+++ b/index.html
@@ -57,7 +57,20 @@
       <a>|</a>
       <a>KO</a>
     </div>
+    <div class="main_logo">
+      <img src="images/logo.png" alt="..." />
+    </div>
     <div class="nav-bar">
+      <div class="nav_icon">
+      <img src="images/nav_icon1.png" alt="..." />
+      <img src="images/nav_icon2.png" alt="..." />
+      <img src="images/nav_icon3.png" alt="..." />
+      <img src="images/nav_icon4.png" alt="..." />
+      <img src="images/nav_icon5.png" alt="..." />
+      <img src="images/nav_icon6.png" alt="..." />
+      <img src="images/nav_icon7.png" alt="..." />
+      <img src="images/nav_icon8.png" alt="..." />
+      </div>
       <a>캘린더</a>
       <a>예매</a>
       <a>호텔</a>
@@ -73,7 +86,22 @@
 
   <!-- SLIDER -->
 
+<div style="overflow: hidden;">
   <div class="slider">
+    <div class="inner">
+      <img src="images/lego_slider.png">
+    </div>
+    <div class="inner">
+      <img src="images/lego_slider.png">
+    </div>
+    <div class="inner">
+      <img src="images/lego_slider.png">
+    </div>
+  </div>
+  <button class="slider_btn1">1</button>
+  <button class="slider_btn2">2</button>
+  <button class="slider_btn3">3</button>
+  </div>
 
     <!-- RESERVATION -->
      
