remove a slider animationa and add Season event text

--- a/index.html
+++ b/index.html
@@ -203,6 +203,10 @@
   <!-- SEASON EVENT -->
   <div class="seasonEvent">
     <div class="img-slider">
+      <div class="eventText">
+        <a>Season</a>
+        <a>Event</a>
+      </div>
       <div class="slide active">  
         <img src="./images/seasonEvent_1.png" alt="">
       </div>
@@ -215,7 +219,6 @@
       <div class="slide">  
         <img src="./images/seasonEvent_4.png" alt="">
       </div>
-
       <div class="navigation">
         <div class="btn active"></div>
         <div class="btn"></div>
