--- a/index.html
+++ b/index.html
@@ -85,23 +85,19 @@
   </header>
 
   <!-- SLIDER -->
-
-<div style="overflow: hidden;">
-  <div class="slider">
-    <div class="inner">
-      <img src="images/lego_slider.png">
-    </div>
-    <div class="inner">
-      <img src="images/lego_slider.png">
-    </div>
-    <div class="inner">
-      <img src="images/lego_slider.png">
+<div class="slider">
+<div class="slider_box">
+  <div class="inner">
+    <div class="images">
+      <img src="images/lego_slider.png" >
+      <img src="images/lego_slider_1.png" >
+      <img src="images/lego_slider_2.png" >
     </div>
   </div>
-  <button class="slider_btn1">1</button>
-  <button class="slider_btn2">2</button>
-  <button class="slider_btn3">3</button>
-  </div>
+  <button class="slider_btn1"><img src="images/prev.png"></button>
+  <button class="slider_btn2"><img src="images/next.png"></button>
+</div>
+</div>
 
     <!-- RESERVATION -->
      
@@ -135,9 +131,7 @@
       </div>
     </div>
   
-    <div class="buyNow">BUY NOW</div>
-   </div>
-      
+    <div class="buyNow">BUY NOW</div>     
   </div>
 
 
