--- a/index.html
+++ b/index.html
@@ -274,7 +274,7 @@
         </p>
   
         <div class="copyright">
-          &copy; <span class="this-year">2020 The LEGO Group. All rights reserved.</span>
+          &copy; <span id="year">2020</span> The LEGO Group. All rights reserved.
         </div>
       </div>
   
