mobile website initial settings

--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
   <meta property="og:type" content="website" />
   <meta property="og:site_name" content="LEGOLAND" />
   <meta property="og:title" content="LEGOLAND Korea" />
-  <meta property="og:description" content="Early Buddies가 새롭게 만들어본 Lego Land" />
+  <meta property="og:description" content="Early Buddies가 새롭게 만들어본 LegoLand" />
   <meta property="og:image" content="./images/LEGOLAND.jpg" />
   <meta property="og:url" content="https://LEGOLAND.co.kr" />
 
   <meta property="twitter:card" content="summary" />
   <meta property="twitter:site" content="LEGOLAND" />
   <meta property="twitter:title" content="LEGOLAND Korea" />
-  <meta property="twitter:description" content="Early Buddies가 새롭게 만들어본 Lego Land" />
+  <meta property="twitter:description" content="Early Buddies가 새롭게 만들어본 LegoLand" />
   <meta property="twitter:image" content="./images/LEGOLAND.jpg" />
   <meta property="twitter:url" content="https://LEGOLAND.co.kr" />
 
@@ -58,7 +58,10 @@
       <a>KO</a>
     </div>
     <div class="main_logo">
-      <img src="images/logo.png" alt="..." />
+      
+    <!-- 모바일 웹으로 고!!  -->
+      <a href="mobile.html"><img src="images/logo.png" alt="모바일 웹으로 뿅!"></a>
+
     </div>
     <div class="nav-bar">
       <div class="nav_icon">
