--- a/mb_navmenu.html
+++ b/mb_navmenu.html
@@ -49,7 +49,10 @@
     </div>
 
     <div class="menu">
-      <div class="menu-item">Search Bar</div>
+      <div class="menu-item search-bar">
+        <span class="search-icon"><i class="material-icons">search</i></span>
+        <span class="search-text">SEARCH FOR ...</span>
+      </div>
       <div class="menu-item temperature">
         <h1 class="celsius">14°</h1>
         <img src="./images/snow.png" class="weather-icon" alt="weather_icon">
@@ -59,11 +62,9 @@
       <div class="menu-item">즐길거리</div>
       <div class="menu-item">이용가이드</div>
     </div>
-    
-    <div class="sns-icons">
-      <img src="sns-icon-1.png" alt="SNS Icon 1">
-      <img src="sns-icon-2.png" alt="SNS Icon 2">
-      <img src="sns-icon-3.png" alt="SNS Icon 3">
+
+    <div class="sns-icon">
+      <img src="sns-icon.png" alt="SNS Icon">
     </div>
 
   
