add mobile main header

--- a/mobile.html
+++ b/mobile.html
@@ -44,7 +44,23 @@
 
 <body>
   
-  모바일 웹 Coming Soon~
+  
+  <div class="mb_top_line">
+    <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
+    </div>
+    <div></div>
+    <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+  </div>
+  
+  <div class="mb_main_slider"><img src="images/mb_pinklego_slide.png" alt="slide_img"></div>
+  <div class="mb_box">
+    <div class="mb_box_img_1"><img src="images/mb_reservation.png" alt="..."></div>
+    <div><img src="images/mb_hotel.png" alt="..."></div>
+    <div><img src="images/mb_hour.png" alt="..."></div>
+    <div><img src="images/mb_park.png" alt="..."></div>
+  </div>
+
+  
 
 </body>
 </html>
