--- a/mobile.html
+++ b/mobile.html
@@ -37,6 +37,8 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link href="https://webfontworld.github.io/goodchoice/Jalnan.css" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
   <link rel="stylesheet" href="./css/mobile.css">
   
@@ -44,6 +46,7 @@
 
 <body>
   
+  <!-- nav -->
   
   <div class="mb_top_line">
     <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
@@ -51,6 +54,9 @@
     <div></div>
     <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
   </div>
+
+
+  <!-- slider -->
   
   <div class="mb_main_slider"><img src="images/mb_pinklego_slide.png" alt="slide_img"></div>
   <div class="mb_box">
@@ -60,6 +66,117 @@
     <div><img src="images/mb_park.png" alt="..."></div>
   </div>
 
+
+  <!-- promotion -->
+
+  <!-- 1 -->
+
+  <span class="promotion_title">PROMOTION</span>
+  <div class="promotion_box1"></div>
+  <div class="promotion_box2">
+    <div class="promotion_subtitle1">KB국민카드 1일 이용권</div>
+    <div class="promotion_subtitle2">2022.05.05 ~ 2027. 05.04</div>
+  </div>
+
+  <!-- 2 -->
+
+  <span class="promotion_title">THEME PARK</span>
+  <div class="themepark1">
+    <div class="themepark_box">
+        <img src="images/mb_theme1.png" alt="..." /><br>
+        <span class="themepark_subtitle">
+        BRICK STREET
+        </span>
+    </div>
+    <div class="themepark_box">
+      <img src="images/mb_theme2.png" alt="..." /><br>
+      <span class="themepark_subtitle">
+        BRICKTOPIA
+      </span>
+    </div>
+  </div>
+  <div class="themepark2">
+    <div class="themepark_box2">
+        <img src="images/mb_theme3.png" alt="..." /><br>
+        <span class="themepark_subtitle">
+        LEGO CASTLE
+        </span>
+    </div>
+    <div class="themepark_box2">
+      <img src="images/mb_theme4.png" alt="..." /><br>
+      <span class="themepark_subtitle">
+        LEGO CITY
+      </span>
+    </div>
+  </div>
+
+  <!-- 3 -->
+
+  <span class="entertainment_title">ENTERTAINMENT</span>
+    <div class="entertainment">
+      <div class="entertainment_box1"></div>
+      <div class="entertainment_box2">
+        <div class="entertainment_subtitle1">SHOW</div>
+        <div class="entertainment_subtitle2">LEGOLAND®에서 준비한 꿀잼 쇼</div>
+      </div>
+    </div>
+
+    <div class="entertainment">
+      <div class="entertainment_box1"></div>
+      <div class="entertainment_box2">
+        <div class="entertainment_subtitle1">EVENT</div>
+        <div class="entertainment_subtitle2">하루로도 부족한 이벤트가 한가득</div>
+      </div>
+    </div>
+
+    <div class="entertainment">
+      <div class="entertainment_box1"></div>
+      <div class="entertainment_box3">
+        <div class="entertainment_subtitle1">DINING</div>
+        <div class="entertainment_subtitle2">신나게 뛰어 논 여러분을 위한 식사</div>
+      </div>
+    </div>
+
+  <!-- <div class="promotion_detail"><img src="images/mb_entertainment.png" alt="..." /></div> -->
+
+ <!-- 4 -->
+
+    <span class="sns_title">INSTARGRAM</span>
+    <div class="sns_box">
+      <div class="sns_subtitle">legolandkorearesort</div>
+      <div class="sns_img"></div>
+      <span class="sns_comment">777</span>
+      <span class="sns_comment">1.4k</span>
+    </div>
+
+  <!-- <div class="promotion_detail"><img src="images/mb_instagram.png" alt="..." /></div> -->
+
+  <!-- <span class="promotion">PROMOTION</span>
+  <div class="promotion_detail"><img src="images/mb_promotion.png" alt="..." /></div>
+  <span class="promotion">THEME PARK</span>
+  <div class="promotion_detail"><img src="images/mb_themepark.png" alt="..." /></div>
+  <span class="promotion">ENTERTAINMENT</span>
+  <div class="promotion_detail"><img src="images/mb_entertainment.png" alt="..." /></div>
+  <span class="promotion">INSTARGRAM</span>
+  <div class="promotion_detail"><img src="images/mb_instagram.png" alt="..." /></div> -->
+
+<!-- footer -->
+
+<div class="footer_box">
+<div class="footer">
+  <span>POLICY</span>
+</div>
+<div class="footer">
+  <span>TERMS & CONDITIONS</span>
+</div>
+<div class="footer">
+  <span>OUR COMPANY</span>
+</div>
+<div class="footer_copyright">
+  <div><img src="images/mb_footer.png" alt="..." /></div>
+  <span>©2020 The LEGO Group. All rights reserved.</span>
+</div>
+</div>
   
 
 </body>
