--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -38,35 +38,50 @@
   <link href="https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 
-  <link rel="stylesheet" href="./css/mobile.css">
+  <link rel="stylesheet" href="./css/mb_attraction_detail.css">
   
-</head>
 
+</head>
 <body>
 
-  <div class="mb_top_line">
-    <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
+  <div class="container">
+    <div class="header">
+      <button class="arrow-button"><img src="./images/arrow.png"></button>
+      <i class="material-icons">language</i></button>
+      <div class="hamburger-button">
+        <button><i class="material-icons">menu</i></button>
+      </div>
     </div>
-    <!-- <div></div>
-    <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
-  </div> -->
 
-  <a href="./mb_navmenu.html">
-    <div class="mb_hamburger_btn" onclick="toggleMenu()">
-      <img src="images/mb_lang.png" alt="...">
-      <div><img src="images/mb_hamburger.png" alt="..."></div>
+    <img class="attraction-image" src="./images/DJ’s Dizzy Disco Spin.png">
+    <h1 class="attraction-title">DJ's Dizzy Disco Spin</h1>
+    <div class="attraction-restriction">
+      <span class="restriction-icon"></span>
+      <span class="restriction-icon"></span>
     </div>
-  </a>
-  
-  <div class="mb_main_slider"><img src="images/mb_pinklego_slide.png" alt="slide_img"></div>
-  <div class="mb_box">
-    <div class="mb_box_img_1"><img src="images/mb_reservation.png" alt="..."></div>
-    <div><img src="images/mb_hotel.png" alt="..."></div>
-    <div><img src="images/mb_hour.png" alt="..."></div>
-    <div><img src="images/mb_park.png" alt="..."></div>
+    <div class="dotted-line"></div>
+    <div class="description">
+      <p>오른쪽으로 빙글! 왼쪽으로 빙글!</p>
+      <p>DJ가 틀어주는 디스코 음악에 맞춰서</p>
+      <p>빙글빙글 돌아볼까요? ~(^_^)~*</p>
+    </div>
+    <div class="icon">
+      <img src="clock-icon.png" alt="Clock Icon">
+    </div>
+    <span>HOURS</span>
+    <ul>
+      <li>월 ~ 목 14:00 ~ 18:00</li>
+      <li>금 10:00 ~ 16:00</li>
+      <li>토 ~ 일 16:00 ~ 21:00</li>
+    </ul>
+    <div class="icon">
+      <img src="location-icon.png" alt="Location Icon">
+    </div>
+    <span>LOCATION</span>
+    <p>Bricktopia</p>
   </div>
 
-  
+
 
 </body>
 </html>
