Update info section and restriction section of attraction detail page

--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -44,41 +44,58 @@
 </head>
 <body>
 
-  <div class="container">
-    <div class="header">
-      <button class="arrow-button"><img src="./images/arrow.png"></button>
-      <i class="material-icons">language</i></button>
-      <div class="hamburger-button">
-        <button><i class="material-icons">menu</i></button>
+      <div class="mb_top_line">
+        <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
+        </div>
+        <div></div>
+        <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+      </div>
+
+    <img class="attraction-image" src="./images/DJ's Dizzy Disco Spin.png">
+
+    <div class="attraction-title-container">
+      <h1 class="attraction-title">DJ's Dizzy Disco Spin</h1>
+    </div>
+
+    <div class="attraction-info">
+      <div class="attraction-info-item">
+        <span><img src="./images/child.png" alt="">100cm 이상 
+              <img src="./images/above.png" alt=""> 혼자 탑승 가능
+        </span>
+      </div>
+
+      <div class="attraction-info-item">
+        <span><img src="./images/withParents.png" alt="">100cm 미만 
+              <img src="./images/below.png" alt="">보호자와 함께 탑승
+       </span>
       </div>
     </div>
 
-    <img class="attraction-image" src="./images/DJ’s Dizzy Disco Spin.png">
-    <h1 class="attraction-title">DJ's Dizzy Disco Spin</h1>
     <div class="attraction-restriction">
-      <span class="restriction-icon"></span>
-      <span class="restriction-icon"></span>
+      <span class="restriction-icon"><img src="./images/restriction-icon.png" alt=""></span>
     </div>
-    <div class="dotted-line"></div>
+
+    <div class="dashed-line"></div>
+
     <div class="description">
       <p>오른쪽으로 빙글! 왼쪽으로 빙글!</p>
       <p>DJ가 틀어주는 디스코 음악에 맞춰서</p>
       <p>빙글빙글 돌아볼까요? ~(^_^)~*</p>
     </div>
-    <div class="icon">
-      <img src="clock-icon.png" alt="Clock Icon">
+
+    <div class="icon hours">
+      <span class="hours-title"><img src="clock-icon.png" alt="Clock Icon">HOURS</span>
     </div>
-    <span>HOURS</span>
-    <ul>
+    <ul class="hours-list">
       <li>월 ~ 목 14:00 ~ 18:00</li>
       <li>금 10:00 ~ 16:00</li>
       <li>토 ~ 일 16:00 ~ 21:00</li>
     </ul>
-    <div class="icon">
-      <img src="location-icon.png" alt="Location Icon">
+    
+    <div class="icon location">
+      <span class="location-title"><img src="location-icon.png" alt="Location Icon">LOCATION</span>
     </div>
-    <span>LOCATION</span>
-    <p>Bricktopia</p>
+    <p class="location-name">Bricktopia</p>
   </div>
 
 
