Update mb_navmenu page weather function

--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -44,12 +44,12 @@
 </head>
 <body>
 
-      <div class="mb_top_line">
-        <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
-        </div>
-        <div></div>
-        <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+    <div class="mb_top_line">
+      <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
       </div>
+      <div></div>
+      <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+    </div>
 
     <img class="attraction-image" src="./images/DJ's Dizzy Disco Spin.png">
 
@@ -84,16 +84,16 @@
     </div>
 
     <div class="icon hours">
-      <span class="hours-title"><img src="clock-icon.png" alt="Clock Icon">HOURS</span>
+      <span class="hours-title"><img src="./images/clock-icon.png" alt="Clock Icon">HOURS</span>
     </div>
     <ul class="hours-list">
       <li>월 ~ 목 14:00 ~ 18:00</li>
-      <li>금 10:00 ~ 16:00</li>
+      <li>금 &nbsp &nbsp &nbsp &nbsp 10:00 ~ 16:00</li>
       <li>토 ~ 일 16:00 ~ 21:00</li>
     </ul>
     
     <div class="icon location">
-      <span class="location-title"><img src="location-icon.png" alt="Location Icon">LOCATION</span>
+      <span class="location-title"><img src="./images/location-icon.png" alt="Location Icon">LOCATION</span>
     </div>
     <p class="location-name">Bricktopia</p>
   </div>
