--- a/mb_navmenu.html
+++ b/mb_navmenu.html
@@ -59,8 +59,8 @@
 
       <div class="weather">
         <div class="temperature">
-          <h1 class="celsius">14°</h1>
-          <img class="weather-icon-mobile" src="./images/drizzle.png"  alt="weather_icon">
+          <h1 class="celsius">14°</h1> 
+          <img class="weather-icon-mb" src="./images/banana.png"  alt="weather_icon">
         </div>
       </div>
       
