Add button link to another page

--- a/mb_navmenu.html
+++ b/mb_navmenu.html
@@ -48,7 +48,7 @@
   <div class="navmenu-container">
     <div class="top-bar">
       <button class="language-button"><i class="material-icons">language</i></button>
-      <button class="close-button" onclick="closeMenu()">X</button>
+      <button class="close-button" onclick="closeNavMenu()">X</button>
     </div>  
 
     <div class="menu">
