--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -48,7 +48,7 @@
       <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
       </div>
       <div></div>
-      <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+      <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
     </div>
 
     <img class="attraction-image" src="./images/DJ's Dizzy Disco Spin.png">
