--- a/mb_onedayPass.html
+++ b/mb_onedayPass.html
@@ -47,7 +47,7 @@
     <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
     </div>
     <div></div>
-    <a href="mobile.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+    <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
   </div>
   
   <div class="image-container">
