--- a/mb_bricktopia.html
+++ b/mb_bricktopia.html
@@ -42,6 +42,11 @@
 
   <link rel="stylesheet" href="./css/mb_bricktopia.css">
   
+  <script
+      src="https://kit.fontawesome.com/ed3cd54472.js"
+      crossorigin="anonymous"
+    ></script>
+
 </head>
 
 <body>
@@ -49,7 +54,7 @@
   <!-- nav -->
   
   <div class="mb_top_line">
-    <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
+    <div class="mb_main_logo"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i>
     </div>
 
     <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
