--- a/mb_themepark.html
+++ b/mb_themepark.html
@@ -42,6 +42,11 @@
 
   <link rel="stylesheet" href="./css/mb_themepark.css">
 
+  <script
+  src="https://kit.fontawesome.com/ed3cd54472.js"
+  crossorigin="anonymous"
+    ></script>
+
   <style>
     #columns {
         column-width:192px;
@@ -73,7 +78,7 @@
   <!-- nav -->
   
   <div class="mb_top_line">
-    <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
+    <div class="mb_main_logo"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i>
     </div>
     <div></div>
     <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
