Update the reservation location on the main page

--- a/index.html
+++ b/index.html
@@ -87,25 +87,26 @@
     </div>
   </header>
 
-  <!-- SLIDER -->
-<div class="slider">
-<div class="slider_box">
-  <div class="inner">
-    <div class="images">
-      <img src="images/lego_slider.png" >
-      <img src="images/lego_slider_1.png" >
-      <img src="images/lego_slider_2.png" >
-    </div>
-  </div>
-  <button class="slider_btn1"><img src="images/prev.png"></button>
-  <button class="slider_btn2"><img src="images/next.png"></button>
-</div>
-</div>
+ 
 
-    <!-- RESERVATION -->
-     
+
+<div class="sliderContainer">
+
+   <!-- SLIDER -->
+  <div class="slider_box">
+    <div class="inner">
+      <div class="images">
+        <img src="images/lego_slider.png" >
+        <img src="images/lego_slider_1.png" >
+        <img src="images/lego_slider_2.png" >
+      </div>
+    </div>
+    <button class="slider_btn1"><img src="images/prev.png"></button>
+    <button class="slider_btn2"><img src="images/next.png"></button>
+  </div>
+
+      <!-- RESERVATION -->
   <div class="reservation">
-  
     <div class="quickTab">
       <ul>
         <li id="ticketTab" class="ticketReserv active">티켓예매</li>
@@ -134,10 +135,9 @@
       </div>
     </div>
   
-    <div class="buyNow">BUY NOW</div>     
+    <div class="buyNow">BUY NOW</div>  
   </div>
-
-
+</div>
 
   <!-- WEATHER -->
   
