Activate links in Hamburger button

--- a/mobile.html
+++ b/mobile.html
@@ -48,9 +48,13 @@
   <!-- nav -->
   <div class="mb_top_line">
     <div class="mb_main_logo"><img src="images/logo.png" alt="모바일 웹으로 뿅!">
-    </div>
-    <div></div>
-    <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+    </div>  
+      <div class="mb_hamburger_btn">
+        <img src="images/mb_lang.png" alt="...">
+        <div>
+        <a href="./mb_navmenu.html"><img src="images/mb_hamburger.png" alt="..."></a>
+        </div>
+      </div>
   </div>
 
   <!-- slider -->
