--- a/mb_themepark.html
+++ b/mb_themepark.html
@@ -80,8 +80,13 @@
   <div class="mb_top_line">
     <div class="mb_main_logo"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i>
     </div>
-    <div></div>
-    <a href="./mb_navmenu.html"><div class="mb_hamburger_btn"><img src="images/mb_lang.png" alt="..."><div><img src="images/mb_hamburger.png" alt="..."></div></div></a>
+
+    <div class="mb_hamburger_btn">
+      <img src="images/mb_lang.png" alt="...">
+      <div>
+      <a href="./mb_navmenu.html"><img src="images/mb_hamburger.png" alt="..."></a>
+      </div>
+    </div>
   </div>
 
 
