Add onedayPass and attraction detail pages footer

--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -110,6 +110,23 @@
     <p class="location-name">Bricktopia</p>
   </div>
 
+    <!-- footer -->
+
+  <div class="footer_box">
+    <div class="footer">
+      <span>POLICY</span>
+    </div>
+    <div class="footer">
+      <span>TERMS & CONDITIONS</span>
+    </div>
+    <div class="footer">
+      <span>OUR COMPANY</span>
+    </div>
+    <div class="footer_copyright">
+      <div><img src="images/mb_footer.png" alt="..." /></div>
+      <span>©2020 The LEGO Group. All rights reserved.</span>
+    </div>
+    </div>
 
 
 </body>
