--- a/mb_onedayPass.html
+++ b/mb_onedayPass.html
@@ -103,5 +103,24 @@
     </div>
   </div>
 
+  <!-- footer -->
+
+  <div class="footer_box">
+    <div class="footer">
+      <span>POLICY</span>
+    </div>
+    <div class="footer">
+      <span>TERMS & CONDITIONS</span>
+    </div>
+    <div class="footer">
+      <span>OUR COMPANY</span>
+    </div>
+    <div class="footer_copyright">
+      <div><img src="images/mb_footer.png" alt="..." /></div>
+      <span>©2020 The LEGO Group. All rights reserved.</span>
+    </div>
+    </div>
+    
+
 </body>
 </html>
