Add links to pages

--- a/mb_bricktopia.html
+++ b/mb_bricktopia.html
@@ -54,7 +54,7 @@
   <!-- nav -->
   
   <div class="mb_top_line">
-    <div class="mb_main_logo"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i>
+    <div class="mb_main_logo"><a href="./mb_themepark.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
     </div>
 
     <div class="mb_hamburger_btn">
@@ -111,14 +111,16 @@
     </div>
   </div>
 
+  <a href="./mb_attraction_detail.html">
   <div class="content">
     <img src="images/mb_bricktopia_img2.png">
     <div class="content_text">
-    <div class="content_title">DJ’s Dizzy Disco Spin</div>
+   <div class="content_title">DJ’s Dizzy Disco Spin</div>
     <span># 디스코스핀 # ( >  < ) / 🎵 🎶</span> <br>
     <span class="content_subtitle"># 음악에 맞춰 뺑글뺑글 돌아볼까요 ?</span>
     </div>
   </div>
+</a>
 
   <div class="content">
     <img src="images/mb_bricktopia_img3.png">
