--- a/mb_themepark.html
+++ b/mb_themepark.html
@@ -119,10 +119,12 @@
       <figcaption>COMING SOON...</figcaption>
     </figure> -->
 
+    <a href="./mb_bricktopia.html">
     <figure>
       <img src="images/mb_themepark_icon5.png">
       <figcaption>BRICK TOPIA</figcaption>
     </figure>
+    </a>
 
     <figure>
       <img src="images/mb_themepark_icon2.png">
