--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -52,7 +52,7 @@
     <div class="mb_top_line">
 
       <div class="mb_main_logo">
-        <i class="fa-solid fa-arrow-left" style="color: #000000;"></i>
+        <a href="./mb_bricktopia.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
       </div>
       <div class="mb_hamburger_btn">
         <img src="images/mb_lang.png" alt="...">
