--- a/mb_navmenu.html
+++ b/mb_navmenu.html
@@ -70,7 +70,7 @@
       
       <div class="menu-item" onclick="toggleSubmenu(this)">LEGOLAND 파크 & 티켓
         <ul class="submenu">
-          <li>1일 / 오후+</li>
+          <a href="./mb_onedayPass.html"><li>1일 / 오후+</a></li>
           <li>시즌 / 연간</li>
           <li>EXTRA</li>
         </ul>
