--- a/mb_onedayPass.html
+++ b/mb_onedayPass.html
@@ -49,7 +49,7 @@
 <body>
 
   <div class="mb_top_line">
-    <div class="mb_main_logo"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i>
+    <div class="mb_main_logo"><a href="./mobile.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
     </div>
 
     <div class="mb_hamburger_btn">
