--- a/mobile.html
+++ b/mobile.html
@@ -68,7 +68,11 @@
   <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
 
   <!-- slider -->
-  <div class="mb_main_slider"><img src="images/mb_pinklego_slide.png" alt="slide_img"></div>
+  <div class="mb_main_slider">
+    <img src="images/mb_pinklego_slide.png" alt="slide_img">
+    <button class="main_btn1"><img src="images/prev.png"/></button>
+    <button class="main_btn2"><img src="images/next.png"/></button>
+  </div>
   <div class="mb_box">
     <div class="mb_box_img_1"><img src="images/mb_reservation.png" alt="..."></div>
     <div><img src="images/mb_hotel.png" alt="..."></div>
@@ -82,7 +86,7 @@
   <!-- 1 -->
 
   <span class="promotion_title">PROMOTION</span>
-  <div class="promotion_box1"></div>
+  <div class="promotion_box1"><img src="images/mb_promotion_img.png"/></div>
   <div class="promotion_box2">
     <div class="promotion_subtitle1">KB국민카드 1일 이용권</div>
     <div class="promotion_subtitle2">2022.05.05 ~ 2027. 05.04</div>
@@ -153,22 +157,13 @@
 
     <span class="sns_title">INSTARGRAM</span>
     <div class="sns_box">
-      <div class="sns_subtitle">legolandkorearesort</div>
-      <div class="sns_img"></div>
-      <span class="sns_comment">777</span>
-      <span class="sns_comment">1.4k</span>
+      <div class="sns_subtitle"><img src="images/bm_sns_profile.png" />legolandkorearesort</div>
+      <div class="sns_img"><img src="images/mb_sns_img.jpg" alt="sns"/></div>
+      <span class="sns_comment"><img src="images/mb_sns_comment.png" />
+        777</span>
+      <span class="sns_comment"><img src="images/mb_sns_love.png" />1.4k</span>
     </div>
 
-  <!-- <div class="promotion_detail"><img src="images/mb_instagram.png" alt="..." /></div> -->
-
-  <!-- <span class="promotion">PROMOTION</span>
-  <div class="promotion_detail"><img src="images/mb_promotion.png" alt="..." /></div>
-  <span class="promotion">THEME PARK</span>
-  <div class="promotion_detail"><img src="images/mb_themepark.png" alt="..." /></div>
-  <span class="promotion">ENTERTAINMENT</span>
-  <div class="promotion_detail"><img src="images/mb_entertainment.png" alt="..." /></div>
-  <span class="promotion">INSTARGRAM</span>
-  <div class="promotion_detail"><img src="images/mb_instagram.png" alt="..." /></div> -->
 
 <!-- footer -->
 
