Add screen size message

--- a/mb_attraction_detail.html
+++ b/mb_attraction_detail.html
@@ -49,6 +49,8 @@
 </head>
 <body>
 
+  <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
+
     <div class="mb_top_line">
 
       <div class="mb_main_logo">
