--- a/mb_bricktopia.html
+++ b/mb_bricktopia.html
@@ -50,6 +50,8 @@
 </head>
 
 <body>
+
+  <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
   
   <!-- nav -->
   
