--- a/mb_themepark.html
+++ b/mb_themepark.html
@@ -75,6 +75,8 @@
 
 <body>
   
+  <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
+
   <!-- nav -->
   
   <div class="mb_top_line">
