--- a/mobile.html
+++ b/mobile.html
@@ -57,6 +57,8 @@
       </div>
   </div>
 
+  <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
+
   <!-- slider -->
   <div class="mb_main_slider"><img src="images/mb_pinklego_slide.png" alt="slide_img"></div>
   <div class="mb_box">
