--- a/mb_onedayPass.html
+++ b/mb_onedayPass.html
@@ -40,10 +40,16 @@
 
   <link rel="stylesheet" href="./css/mb_onedayPass.css">
 
-  <script
-  src="https://kit.fontawesome.com/ed3cd54472.js"
-  crossorigin="anonymous"
-    ></script>
+  <script src="https://kit.fontawesome.com/ed3cd54472.js"crossorigin="anonymous"></script>
+  
+ 
+  <script>
+  window.addEventListener('DOMContentLoaded', function() {
+    var currentYearElement = document.getElementById('current-year');
+    var currentYear = new Date().getFullYear();
+    currentYearElement.textContent = '©' + currentYear + ' The LEGO Group. All rights reserved.';
+  });
+  </script>
 
 </head>
 <body>
@@ -119,9 +125,9 @@
     </div>
     <div class="footer_copyright">
       <div><img src="images/mb_footer.png" alt="..." /></div>
-      <span>©2020 The LEGO Group. All rights reserved.</span>
+      <span id="current-year"></span>
     </div>
-    </div>
+  </div>
     
 
 </body>
