--- a/mobile.html
+++ b/mobile.html
@@ -42,6 +42,14 @@
 
   <link rel="stylesheet" href="./css/mobile.css">
   
+  <script>
+    window.addEventListener('DOMContentLoaded', function() {
+  var currentYearElement = document.getElementById('current-year');
+  var currentYear = new Date().getFullYear();
+  currentYearElement.textContent = '©' + currentYear + ' The LEGO Group. All rights reserved.';
+  });
+  </script>
+
 </head>
 
 <body>
@@ -165,19 +173,19 @@
 <!-- footer -->
 
 <div class="footer_box">
-<div class="footer">
-  <span>POLICY</span>
-</div>
-<div class="footer">
-  <span>TERMS & CONDITIONS</span>
-</div>
-<div class="footer">
-  <span>OUR COMPANY</span>
-</div>
-<div class="footer_copyright">
-  <div><img src="images/mb_footer.png" alt="..." /></div>
-  <span>©2020 The LEGO Group. All rights reserved.</span>
-</div>
+  <div class="footer">
+    <span>POLICY</span>
+  </div>
+  <div class="footer">
+    <span>TERMS & CONDITIONS</span>
+  </div>
+  <div class="footer">
+    <span>OUR COMPANY</span>
+  </div>
+  <div class="footer_copyright">
+    <div><img src="images/mb_footer.png" alt="..." /></div>
+    <span id="current-year"></span>
+  </div>
 </div>
   
 
