--- a/index.html
+++ b/index.html
@@ -65,16 +65,17 @@
     </div>
     <div class="nav-bar">
       <div class="nav_icon">
-      <img src="images/nav_icon1.png" alt="..." />
-      <img src="images/nav_icon2.png" alt="..." />
-      <img src="images/nav_icon3.png" alt="..." />
-      <img src="images/nav_icon4.png" alt="..." />
-      <img src="images/nav_icon5.png" alt="..." />
-      <img src="images/nav_icon6.png" alt="..." />
-      <img src="images/nav_icon7.png" alt="..." />
-      <img src="images/nav_icon8.png" alt="..." />
+      <img src="images/nav_icon1.jpg" alt="..." />
+      <img src="images/nav_icon2.jpg" alt="..." />
+      <img src="images/nav_icon3.jpg" alt="..." />
+      <img src="images/nav_icon4.jpg" alt="..." />
+      <img src="images/nav_icon5.jpg" alt="..." />
+      <img src="images/nav_icon6.jpg" alt="..." />
+      <img src="images/nav_icon7.jpg" alt="..." />
+      <img src="images/nav_icon8.jpg" alt="..." />
+      <img src="images/nav_icon9.jpg" alt="..." />
       </div>
-      <a>캘린더</a>
+      <!-- <a>캘린더</a>
       <a>예매</a>
       <a>호텔</a>
       <a>어트랙션</a>
@@ -83,7 +84,7 @@
       <a>지도</a>
       <a>가이드</a>
       <a>배리어프리</a>
-      <a>자주 묻는 질문</a>
+      <a>자주 묻는 질문</a> -->
     </div>
   </header>
 
@@ -93,6 +94,7 @@
 <div class="sliderContainer">
 
    <!-- SLIDER -->
+   
   <div class="slider_box">
     <div class="inner">
       <div class="images">
@@ -160,6 +162,7 @@
 
 
   <!-- PROMOTION -->
+
     <div class="promotion">
       <a>Ticket</a>
       <a>Promotion</a>
