--- a/mb_main.html
+++ b/mb_main.html
@@ -40,7 +40,7 @@
   <link href="https://webfontworld.github.io/goodchoice/Jalnan.css" rel="stylesheet">
   <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;300;400;500;700;900&display=swap" rel="stylesheet">
 
-  <link rel="stylesheet" href="./css/mobile.css">
+  <link rel="stylesheet" href="./css/mb_main.css">
   
   <script>
     window.addEventListener('DOMContentLoaded', function() {
@@ -68,11 +68,23 @@
   <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
 
   <!-- slider -->
+
   <div class="mb_main_slider">
     <img src="images/mb_pinklego_slide.png" alt="slide_img">
     <button class="main_btn1"><img src="images/prev.png"/></button>
     <button class="main_btn2"><img src="images/next.png"/></button>
   </div>
+
+
+  <!-- <div class="mb_main_slider">
+    <img src="images/mb_pinklego_slide.png" alt="slide_img">
+    <button class="main_btn1"><img src="images/prev.png"/></button>
+    <button class="main_btn2"><img src="images/next.png"/></button>
+  </div> -->
+
+
+<!-- guide -->
+
   <div class="mb_box">
     <div class="mb_box_img_1"><img src="images/mb_reservation.png" alt="..."></div>
     <div><img src="images/mb_hotel.png" alt="..."></div>
@@ -128,7 +140,9 @@
 
   <span class="entertainment_title">ENTERTAINMENT</span>
     <div class="entertainment">
-      <div class="entertainment_box1"></div>
+      <div class="entertainment_box1">
+        <img src="images/entertainment_event.png"/>
+      </div>
       <div class="entertainment_box2">
         <div class="entertainment_subtitle1">SHOW</div>
         <div class="entertainment_subtitle2">LEGOLAND®에서 준비한 꿀잼 쇼</div>
@@ -136,7 +150,9 @@
     </div>
 
     <div class="entertainment">
-      <div class="entertainment_box1"></div>
+      <div class="entertainment_box1">
+        <img src="images/entertainment_show.png"/>
+      </div>
       <div class="entertainment_box2">
         <div class="entertainment_subtitle1">EVENT</div>
         <div class="entertainment_subtitle2">하루로도 부족한 이벤트가 한가득</div>
@@ -144,7 +160,9 @@
     </div>
 
     <div class="entertainment">
-      <div class="entertainment_box1"></div>
+      <div class="entertainment_box1">
+        <img src="images/entertainment_dining.png"/>
+      </div>
       <div class="entertainment_box3">
         <div class="entertainment_subtitle1">DINING</div>
         <div class="entertainment_subtitle2">신나게 뛰어 논 여러분을 위한 식사</div>
@@ -158,7 +176,7 @@
     <span class="sns_title">INSTARGRAM</span>
     <div class="sns_box">
       <div class="sns_subtitle"><img src="images/bm_sns_profile.png" />legolandkorearesort</div>
-      <div class="sns_img"><img src="images/mb_sns_img.jpg" alt="sns"/></div>
+      <div class="sns_img"><img src="images/mb_sns_img.png" alt="sns"/></div>
       <span class="sns_comment"><img src="images/mb_sns_comment.png" />
         777</span>
       <span class="sns_comment"><img src="images/mb_sns_love.png" />1.4k</span>
