Update reservation section

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     <div class="main_logo">
       
     <!-- 모바일 웹으로 고!!  -->
-      <a href="mobile.html"><img src="images/logo.png" alt="모바일 웹으로 뿅!"></a>
+      <a href="./mb_main.html"><img src="images/logo.png" alt="모바일 웹으로 뿅!"></a>
 
     </div>
     <div class="nav-bar">
