--- a/index.html
+++ b/index.html
@@ -78,20 +78,9 @@
       <img src="images/nav_icon8.jpg" alt="..." />
       <img src="images/nav_icon9.jpg" alt="..." />
       </div>
-      <!-- <a>캘린더</a>
-      <a>예매</a>
-      <a>호텔</a>
-      <a>어트랙션</a>
-      <a>쇼핑</a>
-      <a>프로모션</a>
-      <a>지도</a>
-      <a>가이드</a>
-      <a>배리어프리</a>
-      <a>자주 묻는 질문</a> -->
     </div>
   </header>
 
- 
 
 
 <div class="sliderContainer">
@@ -239,18 +228,21 @@
       <a>파크지도</a></br>
       <a>레고랜드를 한눈에 !</a>
       </div>
+      <div class="vl"></div>
       <div class="guide2">
-        <img src="images/guide_img2.png" alt="..." />
+        <img src="images/guide_img1.png" alt="..." />
         <a>레고랜드 모바일 앱</a></br>
         <a>레고랜드를 어플로 만나보세요 !</a>
         </div>
+        <div class="vl"></div>
         <div class="guide3">
-        <img src="images/guide_img3.png" alt="..." />
+        <img src="images/guide_img1.png" alt="..." />
         <a>방문 전 확인사항</a></br>
         <a>오기 전에 확인하면 좋아요 : )</a>
         </div>
+        <div class="vl"></div>
         <div class="guide4">
-        <img src="images/guide_img4.png" alt="..." />
+        <img src="images/guide_img1.png" alt="..." />
         <a>편리사항</a></br>
         <a>궁금한건 물어보세요 ~</a>
         </div>
