--- a/mb_onedayPass.html
+++ b/mb_onedayPass.html
@@ -57,7 +57,7 @@
   <div id="screen-size-message">Oops! Your screen size is too big. Make it smaller for the best experience!</div>
 
   <div class="mb_top_line">
-    <div class="mb_main_logo"><a href="./mobile.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
+    <div class="mb_main_logo"><a href="./mb_main.html"><i class="fa-solid fa-arrow-left" style="color: #000000;"></i></a>
     </div>
 
     <div class="mb_hamburger_btn">
