Add links to instargram section

--- a/index.html
+++ b/index.html
@@ -254,10 +254,10 @@
       <a>#레고랜드</a>
       <a>해시태그로 올려주세요!</a>
       <div class="sns_img">
-      <img src="images/image_0.webp" alt="..." />
-      <img src="images/image_3.webp" alt="..." />
-      <img src="images/image_2.webp" alt="..." />
-      <img src="images/image_4.webp" alt="..." />
+      <a href="https://www.instagram.com/p/Cpv8D5jJiyR/"><img src="images/image_0.webp" alt="..." /></a>
+      <a href="https://www.instagram.com/p/CqCq9v_Jkfq/"><img src="images/image_3.webp" alt="..." /></a>
+      <a href="https://www.instagram.com/p/Cp31s6gJoSY/"><img src="images/image_2.webp" alt="..." /></a>
+      <a href="https://www.instagram.com/p/CqHMjvCrJFE/"><img src="images/image_4.webp" alt="..." /></a>
       </div>
     </div>
 
