Position floating image to the left 10% of the screen

--- a/index.html
+++ b/index.html
@@ -49,6 +49,11 @@
 
 <body>
 
+    <!-- 모바일 웹으로 고!!  -->
+    <div id="floatingIconContainer">
+      <img src="./images/floatingCat.png" alt="Floating Icon" id="floatingIcon">
+    </div>
+
   <!-- HEADER -->
   <header>
     <div class="top-line">
@@ -62,8 +67,8 @@
     </div>
     <div class="main_logo">
       
-    <!-- 모바일 웹으로 고!!  -->
-      <a href="./mb_main.html"><img src="images/logo.png" alt="모바일 웹으로 뿅!"></a>
+
+      <a href="./index.html"><img src="images/logo.png" alt=""></a>
 
     </div>
     <div class="nav-bar">
