Add link to floating image

--- a/index.html
+++ b/index.html
@@ -51,7 +51,9 @@
 
     <!-- 모바일 웹으로 고!!  -->
     <div id="floatingIconContainer">
+      <a href="./mb_main.html">
       <img src="./images/floatingCat.png" alt="Floating Icon" id="floatingIcon">
+      </a>
     </div>
 
   <!-- HEADER -->
